2006-10-01  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/game.cpp, src/gui/trade.cpp, src/gui/inventorywindow.cpp:
	Accepted patches by GDO and VictorSan that fix problems with hiding
	windows using h and problems with trade window positioning.

2006-09-38  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/map.cpp: Fix random crashes when map tiles are missing.

2006-09-28  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/graphics/maps/new_2-1.tmx.gz: Matt Howe fixed up cave map.

2006-09-26  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/graphics/maps/new_6-1.tmx.gz: Alderan fixed a map issue.

2006-09-25  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/graphics/sprites/hairstyle*.png,
	data/graphics/sprites/hairstyle*.xml, tools/Reorganize.java: Removed
	unused frames from the hairsets.
	* src/resources/image.h: Defined NO_SDL_GLEXT to prevent a
	redefinition when gl.h also tries to define OpenGL extensions (patch
	accepted from Rogier Polak).

2006-09-23  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* data/maps/new_5-1.tmx.gz: Accepted new version by Matt Howe, fixing
	several mapping issues.

2006-09-21  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/graphics/tiles/Makefile.am: Added missing tileset.
	* src/gui/updatewindow.cpp, src/gui/updatewindow.h: Made canceling the
	update process non-blocking (Patch by VictorSan).

2006-09-21  Philipp Sehmisch  <tmw@crushnet.org>

	* src/animation.cpp, src/animation.h, src/animatedsprite.cpp,
	src/animatedsprite.h: Removed some obsolete code and implemented
	the posibility to define an <end /> token in the <animation>s
	that allows to define an animation that doesn't loop and returns
	to the STAND animation when finished.
	* data/graphics/sprites/hairstyle*.xml,
	data/graphics/sprites/item0*.xml,
	data/graphics/sprites/monster*.xml,
	data/graphics/sprites/weapons.xml: Used the <end /> token for all
	attack animations fixing the problem with looping monster attack
	animations.
