@@ -1,3 +1,8 @@
+2006-10-01  Eugenio Favalli  <elvenprogrammer@gmail.com>
+
+	* tools/Purger.java: Added a tool to purge old accounts from eAthena's
+	database files.
+
 2006-10-01  Bjørn Lindeijer  <bjorn@lindeijer.nl>
 
 	* src/game.cpp, src/gui/trade.cpp, src/gui/inventorywindow.cpp:
